第二次更新删除了原来的页面

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://xiongsircool.github.io/xiongbook/ 
+url: https://xiongsircool.github.io/xiongbook
 date_format: "ordinal"
 title: 熊的博客
 subtitle: "什么也别说"
@@ -168,10 +168,10 @@ beaudar:
     repo: mzlogin/blog-comments
 # giscus 配置参考：https://giscus.app/zh-CN
 giscus:
-    repo: mzlogin/blog-comments
-    repo-id: MDEwOlJlcG9zaXRvcnk5MzEyNzkxNw==
+    repo: xiongsircool/xiongbook
+    repo-id: R_kgDOKC7rNw
     category: Announcements
-    category-id: DIC_kwDOBY0E7c4CRtg9
+    category-id: DIC_kwDOKC7rN84CYUmv
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
