--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 - sitename: GitHub
-  name: mzlogin
-  url: https://github.com/mzlogin
+  name: xiongbook
+  url: https://github.com/xiongsircool
 
 - sitename: 掘金
   name: mzlogin
