第五次更新

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl: https://xiongsircool.github.io/xiongbook
-url: https://xiongsircool.github.io/xiongbook/
+url: https://xiongsircool.github.io/xiongbook
 date_format: "ordinal"
 title: 熊的博客
 subtitle: "什么也别说"
