第五次更新

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,3 +1,3 @@
 - sitename: GitHub
-  name: xiongbook
-  url: https://github.com/xiongsircool
+  name: xiong
+  url: https://github.com/xiongsircool/
