--- a/_data/social.yml
+++ b/_data/social.yml
@@ -3,25 +3,25 @@
   url: https://github.com/xiongsircool
 
 - sitename: 掘金
-  name: mzlogin
-  url: http://gold.xitu.io/user/570ddaeb2e958a005c63b2da
+  name: 
+  url: 
 
 - sitename: LinkedIn
-  name: mazhuang
-  url: https://www.linkedin.com/in/mazhuang
+  name: 
+  url: 
 
 - sitename: 博客
-  name: 码志
-  url: http://mazhuang.org
+  name: 
+  url:
 
 - sitename: 微博
-  name: mzlogin
-  url: http://weibo.com/mzlogin
+  name: 
+  url:
 
 - sitename: 知乎
-  name: mzlogin
-  url: http://www.zhihu.com/people/mzlogin
+  name: 
+  url:
 
 - sitename: 豆瓣
-  name: 闷骚的程序员
-  url: http://www.douban.com/people/freedim
+  name: 
+  url:
